@@ -20,6 +20,10 @@ Version 1.11.9+dev:
    * New UI for displaying errors detected during the core and add-on WML
      loading process (parser and preprocessor errors), including the
      ability to copy the report to clipboard.
+   * Damage Calculations now additionally show cumulative density function
+     (the probability of having at least a certain amount of hp after a 
+     battle is now displayed in addition to the currently displayed probability
+     of the battle finishing at a particular hp
  * WML engine:
    * WML loading phase errors are reported to stderr in a new indented format.
    * Implemented [true] and [false] ConditionalWML tags, which describe a
@@ -6905,7 +6909,7 @@ Version 1.3.1:
  * graphics
    * missiles now take unit_height_adjust into account
    * improved layering system for terrain graphics
-   * fixed terrain selection probabilites (patch #617)
+   * fixed terrain selection probabilities (patch #617)
    * stoned units do not use a separate cache
    * no more "darkened" cache. we now overlay terrain/darken.png
    * added the option to draw overlays on terrains filter by location,
